[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Structures/towerRound_sampleE_W.png" type="Texture" id=1]
[ext_resource path="res://Structures/TowerTemplate.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 121.47

[node name="TowerTemplate" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -16 )

[node name="Sprite" type="Sprite" parent="Node2D"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 1 )

[node name="AttackRange" type="Area2D" parent="."]
scale = Vector2( 1.1, 1.1 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 1 )

[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
